# jalali-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
