[package]
name = "jalali-rs"
version = "0.1.1"
edition = "2024"
description = "A Rust crate for converting between Gregorian and Jalali (Persian) dates."
authors = ["A1Gard <a1gard@4xmen.ir>"]
license = "MIT"
repository = "https://github.com/4xmen/jalali-rs"
keywords = ["date", "shamsi", "jalali", "persian", "gregorian"]
categories = ["date-and-time"]

[dependencies]
